[gd_scene load_steps=11 format=3 uid="uid://bvq2kh54va3gw"]

[ext_resource type="PackedScene" uid="uid://bnlnfejyhrq23" path="res://UI/BasePanel/base_panel.tscn" id="1_t7s01"]
[ext_resource type="Script" uid="uid://dvw8smuqagrv3" path="res://UI/CountryPanel/country_panel.gd" id="2_36tsi"]
[ext_resource type="FontFile" uid="uid://dqf1pilfs5il1" path="res://Assets/Fonts/RobotoCondensed-VariableFont_wght.ttf" id="3_36tsi"]
[ext_resource type="Texture2D" uid="uid://3h48x6hhd5gt" path="res://Assets/default.svg" id="3_ktovx"]
[ext_resource type="PackedScene" uid="uid://dw1x8sc06xa41" path="res://UI/LabeledField/labeled_field.tscn" id="4_gqc0b"]
[ext_resource type="Script" uid="uid://bytkutsi2hjha" path="res://Resources/Good/good.gd" id="4_v207f"]
[ext_resource type="Script" uid="uid://dfbthcphygry1" path="res://Resources/Country/country.gd" id="4_y3oxm"]
[ext_resource type="Script" uid="uid://g2bmvw0sh088" path="res://Resources/War/war.gd" id="5_04eb3"]
[ext_resource type="Resource" uid="uid://bq28dd2dyfs1e" path="res://Resources/Good/gun.tres" id="5_d8ds8"]

[sub_resource type="Resource" id="Resource_v207f"]
script = ExtResource("4_y3oxm")
name = "Country"
flag = ExtResource("3_ktovx")
stability = 1.0
regime = 0
inventory = Dictionary[ExtResource("4_v207f"), int]({
ExtResource("5_d8ds8"): 100
})
funds = 100.0
wars = Array[ExtResource("5_04eb3")]([])

[node name="CountryPanel" instance=ExtResource("1_t7s01")]
script = ExtResource("2_36tsi")
country = SubResource("Resource_v207f")
panel_name = "country"

[node name="PrimaryDetails" type="HBoxContainer" parent="MarginContainer/Contents" index="0"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="FlagContainer" type="Control" parent="MarginContainer/Contents/PrimaryDetails" index="0"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Flag" type="TextureRect" parent="MarginContainer/Contents/PrimaryDetails/FlagContainer" index="0"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ktovx")
expand_mode = 4
stretch_mode = 5

[node name="CountryName" type="Label" parent="MarginContainer/Contents/PrimaryDetails" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_36tsi")
theme_override_font_sizes/font_size = 48
text = "Country"
vertical_alignment = 1
text_overrun_behavior = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Contents" index="1"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="SecondaryDetails" type="VBoxContainer" parent="MarginContainer/Contents" index="2"]
layout_mode = 2

[node name="Regime" parent="MarginContainer/Contents/SecondaryDetails" index="0" instance=ExtResource("4_gqc0b")]
unique_name_in_owner = true
layout_mode = 2
label = "Regime"
value = "Democratic"

[node name="Stability" parent="MarginContainer/Contents/SecondaryDetails" index="1" instance=ExtResource("4_gqc0b")]
unique_name_in_owner = true
layout_mode = 2
label = "Stability"
value = "100.0"

[node name="Population" parent="MarginContainer/Contents/SecondaryDetails" index="2" instance=ExtResource("4_gqc0b")]
unique_name_in_owner = true
layout_mode = 2
label = "Population"
value = "10.0"

[node name="Funds" parent="MarginContainer/Contents/SecondaryDetails" index="3" instance=ExtResource("4_gqc0b")]
unique_name_in_owner = true
layout_mode = 2
label = "Funds"
value = "100.0"

[node name="MilitaryPower" parent="MarginContainer/Contents/SecondaryDetails" index="4" instance=ExtResource("4_gqc0b")]
unique_name_in_owner = true
layout_mode = 2
label = "Military Power"
value = "10.0"
